opam-version: "2.0"
maintainer: "Thomas Staudt <tscode@posteo.net>"
authors: [ "Thomas Staudt <tscode@posteo.net>" ]
license: "GPL3"
homepage: "https://github.com/tscode/tood"
bug-reports: "https://github.com/tscode/tood/issues"
dev-repo: "git+https://github.com/tscode/tood.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {>= "1.0"}
  "base"
  "angstrom"
]
synopsis: "Library for simple but functional todo list management"
description: """
Tood is an ocaml library that collects types and functions useful for basic todo
list management. The list entries that it implements support date-, context-,
and project-tags, as well as priorities. Tood todo lists can be pretty-printed
in customizable formats, filtered by general boolean selectors, and modified
/ updated programmatically.
"""
name: "tood"
version: "~dev"
